Got rid of Guava